# exam-schedule

./: LICENSE  README.md  exam-schedule.cabal  example-input.txt
src/: Main.hs
