name:                exam-schedule
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eckankar/exam-schedule#readme
license:             MIT
license-file:        LICENSE
author:              Sebastian Paaske Tørholm
maintainer:          eckankar+github@gmail.com
copyright:           2022 Sebastian Paaske Tørholm
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable exam-schedule
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
                     , random-shuffle
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
